2006-09-22  Alan Modra  <amodra@bigpond.net.au>

	* as.h (as_perror): Delete declaration.
	* gdbinit.in (as_perror): Delete breakpoint.
	* messages.c (as_perror): Delete function.
	* doc/internals.texi: Remove as_perror description.
	* listing.c (listing_print: Don't use as_perror.
	* output-file.c (output_file_create, output_file_close): Likewise.
	* symbols.c (symbol_create, symbol_clone): Likewise.
	* write.c (write_contents): Likewise.
	* config/obj-som.c (obj_som_version, obj_som_copyright): Likewise.
	* config/tc-tic54x.c (tic54x_mlib): Likewise.

2006-09-22  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-ppc.c (md_section_align): Don't round up address for ELF.
	(ppc_handle_align): New function.
	* config/tc-ppc.h (HANDLE_ALIGN): Use ppc_handle_align.
	(SUB_SEGMENT_ALIGN): Define as zero.

2006-09-20  Bob Wilson  <bob.wilson@acm.org>

	* doc/as.texinfo: Fix cross reference usage, typos and grammar.
	(Overview): Skip cross reference in man page.

2006-09-20  Kai Tietz  <Kai.Tietz@onevision.com>

	* configure.in: Add new target x86_64-pc-mingw64.
	* configure: Regenerate.
	* configure.tgt: Add new target x86_64-pc-mingw64.
	* config/obj-coff.h: Add handling for TE_PEP target specific code and definitions.
	* config/tc-i386.c: Add new targets.
	(md_parse_option): Add targets to OPTION_64.
	(x86_64_target_format): Add new method for setup proper default target cpu mode.
	* config/te-pep.h: Add new target definition header.
	(TE_PEP): New macro: Identifies new target architecture.
	(COFF_WITH_pex64): Set proper includes in bfd.
	* NEWS: Mention new target.

2006-09-18  Bernd Schmidt  <bernd.schmidt@analog.com>

	* config/bfin-parse.y (binary): Change sub of const to add of negated
	const.

2006-09-17  Mei Ligang  <ligang@sunnorth.com.cn>

	* config/tc-score.c: New file.
	* config/tc-score.h: Newf file.
	* configure.tgt: Add Score target.
	* Makefile.am: Add Score files.
	* Makefile.in: Regenerate.
	* NEWS: Mention new target support.
